# musical-succotash

./: pyproject.toml  scrapy.cfg
psychology_today/: check_proxies.py  good_proxies.txt  items.py  middlewares.py  pipelines.py  psych.csv  selenium_scrape.py  settings.py  therapist.py  therapists.json
psychology_today/spiders/: psychology_today.py
