
[tool.poetry]
name = "musical-succotash"
version = "0.1.0"
description = ""
authors = ["Collin Pfeifer <collinpfeifer@Icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
scrapy = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
