[tool.poetry]
name = "musical-succotash"
version = "0.1.0"
description = ""
authors = ["Collin Pfeifer <collinpfeifer@Icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
zipcodes = "^1.2.0"
requests = "^2.32.3"
selenium = "^4.27.1"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
